--- a/src/app/view/sidebar/sidebar.component.html
+++ b/src/app/view/sidebar/sidebar.component.html
@@ -178,23 +178,24 @@
 
 
   <!-- Modal para Cierre de Sesión -->
-  <!-- Modal para Cierre de Sesión -->
   <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered"> <!-- Clase para centrar el modal verticalmente -->
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="logoutModalLabel">Cerrar Sesión</h5>
+          <h5 class="modal-title" id="logoutModalLabel">
+            Cierre de Sesión</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body text-center"> <!-- Centrado horizontalmente -->
-          <p style="font-size: 18px; margin: 0; line-height: 1.5;">
+          <p style="font-size: 20px; margin: 0; line-height: 1.5;">
             ¿Estás seguro de que deseas cerrar la sesión?
           </p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-success" (click)="confirmLogout()" data-bs-dismiss="modal">Cerrar
-            Sesión</button>
+          <button type="button" class="btn btn-success" (click)="confirmLogout()" data-bs-dismiss="modal">
+            <i class="fas fa-sign-out-alt me-2"></i> Cerrar Sesión
+          </button>
         </div>
       </div>
     </div>
