--- a/src/app/view/historias-medicas/historias-medicas.component.html
+++ b/src/app/view/historias-medicas/historias-medicas.component.html
@@ -597,10 +597,12 @@
             <button class="btn btn-outline-secondary me-2">
               <i class="bi bi-printer"></i> Imprimir
             </button>
-            <button class="btn btn-primary" (click)="historiaSeleccionada && editarHistoria(historiaSeleccionada)"
-              [disabled]="!historiaSeleccionada">
+            <button class="btn btn-primary"
+              *ngIf="obtenerSedeDesdePacienteId(historiaSeleccionada?.pacienteId ?? '') === sedeActiva"
+              (click)="editarHistoria(historiaSeleccionada)">
               <i class="bi bi-pencil-square"></i> Editar
             </button>
+
           </div>
         </div>
       </div>
@@ -666,8 +668,6 @@
                       <ng-select [items]="tiposCristales" bindLabel="label" bindValue="value"
                         formControlName="tipoCristalActual" [searchable]="true" placeholder="Seleccione un tipo...">
                       </ng-select>
-
-
                     </div>
 
                     <div class="col-md-4">
