Navegacion de pacientes a historia

--- a/src/app/view/historias-medicas/historias-medicas.component.html
+++ b/src/app/view/historias-medicas/historias-medicas.component.html
@@ -1131,3 +1131,8 @@
           </div>
         </div>
       </div>
+
+
+      <div *ngIf="mostrarBotonVolver" class="boton-flotante" (click)="volverAlListado()">
+        🧭 ¿Volver al listado de pacientes?
+      </div>
