--- a/src/app/view/historias-medicas/historias-medicas.component.scss
+++ b/src/app/view/historias-medicas/historias-medicas.component.scss
@@ -213,6 +213,28 @@ table {
   transition: background-color 0.3s ease;
 }
 
+
+//Boton flotante
+.boton-flotante {
+  position: fixed;
+  bottom: 80%;
+  right: 300px;
+  background: #e0f7fa;
+  color: #00796b;
+  padding: 12px 16px;
+  border-radius: 20px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  font-weight: 500;
+  transition: all 0.3s ease;
+  z-index: 1000;
+}
+
+.boton-flotante:hover {
+  background: #b2ebf2;
+}
+
+
 /* Responsive */
 @media (max-width: 767.98px) {
   .table-responsive-custom {
