--- a/src/app/view/pacientes/pacientes.component.scss
+++ b/src/app/view/pacientes/pacientes.component.scss
@@ -125,7 +125,7 @@
     margin-top: 0;
     margin-bottom: 3px;
     // color: var(--primary-color) !important;
-     color: var(--formLabel-color) !important;
+    color: var(--formLabel-color) !important;
     font-size: 18px;
 }
 
@@ -140,4 +140,66 @@
 .sortable {
     cursor: pointer;
     user-select: none;
+}
+
+.table-responsive-wrapper::-webkit-scrollbar {
+    height: 6px;
+}
+
+.table-responsive-wrapper::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 123, 255, 0.5) !important;
+    border-radius: 4px;
+}
+
+.ng-dropdown-panel .ng-dropdown-panel-items::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 123, 255, 0.8) !important;
+}
+
+.modal.fade .modal-dialog {
+    transition: transform 0.3s ease-in-out;
+    transform: translateY(0);
+}
+
+
+@media (max-width: 768px) {
+    .table-responsive-wrapper {
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        width: 100%;
+    }
+
+    .table {
+        min-width: 700px; // ajusta según columnas
+        table-layout: auto;
+    }
+
+    .table th,
+    .table td {
+        white-space: nowrap;
+        padding: 0.5rem;
+        font-size: 14px;
+    }
+
+    .filtroPaciente {
+        top: 10px;
+    }
+
+    .modal.fade .modal-dialog {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        margin: 0 auto;
+        padding-left: 1rem;
+        padding-right: 1rem;
+
+    }
+
+    .modal-content {
+        max-height: 90vh;
+        overflow-y: auto;
+        border-radius: 12px;
+        width: 100%; // se adapta al padding del dialog
+    }
+
 }
