Ajuste en paciente para campo email opcional

--- a/src/app/view/pacientes/pacientes.component.html
+++ b/src/app/view/pacientes/pacientes.component.html
@@ -185,7 +185,7 @@
               <!-- Email -->
               <div class="col-md-6">
                 <label class="form-label fw-medium text-dark-label">
-                  Email <span class="text-danger">*</span>
+                  Email
                 </label>
                 <input type="email" class="form-control border-2 py-2" formControlName="email"
                   placeholder="Ej: paciente@email.com" maxlength="100">
